<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_default="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:titleTextColor="@color/black"
            app:layout_scrollFlags="enterAlways"
            app:navigationIcon="@drawable/ic_back_black"/>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintWidth_default="spread"
            app:layout_constraintHeight_default="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appbar"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/event_photo_recycler"
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:layout_marginTop="12dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_default="spread"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

            </androidx.recyclerview.widget.RecyclerView>

            <TextView
                    android:id="@+id/event_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginTop="32dp"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:gravity="start"
                    tools:text="Спасаем панду в Зоопарке"
                    app:layout_constraintWidth_default="spread"
                    app:layout_constraintTop_toBottomOf="@id/event_photo_recycler"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                    android:id="@+id/event_who"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginTop="12dp"
                    android:textSize="16sp"
                    android:textColor="@color/black_phantom"
                    android:gravity="start"
                    tools:text="WWF: Всемирный фонд охраны дикой природы"
                    app:layout_constraintWidth_default="spread"
                    app:layout_constraintTop_toBottomOf="@id/event_title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                    android:id="@+id/event_likes"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginTop="12dp"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    android:gravity="start"
                    android:drawablePadding="4dp"
                    android:drawableStart="@drawable/ic_like"
                    tools:text="467"
                    app:layout_constraintWidth_default="spread"
                    app:layout_constraintTop_toBottomOf="@id/event_who"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/event_target_container"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginTop="32dp"
                    android:padding="12dp"
                    android:background="@drawable/bg_red_phantom_rounded"
                    app:layout_constraintWidth_default="spread"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/event_likes">

                <TextView
                        android:id="@+id/event_target_title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:textColor="@color/red"
                        android:textSize="16sp"
                        android:text="@string/target"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintWidth_default="spread"/>

                <TextView
                        android:id="@+id/event_target_description"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:gravity="start"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        tools:text="Все собранные деньги пойдут на операцию Феде — редчайшему бамбуковому медведю и последнему в Санкт-Петербургском зоопарке."
                        app:layout_constraintTop_toBottomOf="@id/event_target_title"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintWidth_default="spread"/>

                <TextView
                        android:id="@+id/event_target_sum_title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="32dp"
                        android:gravity="start"
                        android:textColor="@color/red"
                        android:textSize="16sp"
                        android:text="@string/sum_title"
                        app:layout_constraintTop_toBottomOf="@id/event_target_description"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintWidth_default="spread"/>

                <TextView
                        android:id="@+id/event_target_sum"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:gravity="start"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        tools:text="7,322,212 из 20,200,000 рублей"
                        app:layout_constraintTop_toBottomOf="@id/event_target_sum_title"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintWidth_default="spread"/>

                <View
                        android:id="@+id/event_target_sum_total"
                        android:layout_width="0dp"
                        android:layout_height="5dp"
                        android:layout_marginTop="12dp"
                        android:background="@drawable/bg_sum_total"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/event_target_sum"
                />

                <View
                        android:id="@+id/event_target_sum_progress"
                        android:layout_width="1dp"
                        android:layout_height="0dp"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="6dp"
                        android:background="@drawable/bg_goal_progress"
                        app:layout_constraintHeight_default="spread"
                        app:layout_constraintStart_toStartOf="@id/event_target_sum_total"
                        app:layout_constraintEnd_toEndOf="@id/event_target_sum_total"
                        app:layout_constraintTop_toTopOf="@id/event_target_sum_total"
                        app:layout_constraintBottom_toBottomOf="@id/event_target_sum_total"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                    android:id="@+id/event_gift_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginTop="32dp"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:gravity="start"
                    android:text="@string/gift_title"
                    app:layout_constraintWidth_default="spread"
                    app:layout_constraintTop_toBottomOf="@id/event_target_container"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/event_achivments_recycler"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="16dp"
                    app:layout_constraintTop_toBottomOf="@id/event_gift_title"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintWidth_default="spread"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>